[build-system]
requires = [
  "scikit-build-core>=0.11.5",
  "nanobind >=2.7.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "sofpycdb"
version = "0.1.0-dev1"
description = "test."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Studio W Engineers", email = "studio.w.engineers@gmail.com" }
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/StudioWEngineers/sofpycdb"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["sofpycdb"]
cmake.version = ">=3.30"
cmake.build-type = "Release"
wheel.py-api = "cp312"      # This ensures cp312-abi3 tag is used
sdist.include = ["src", "sofpycdb", "README.md", "LICENSE", "pyproject.toml"]
